syntax = "proto3";
package product.private.biz;

option go_package = "github.com/go-saas/kit/product/private/biz;biz";

message ProductUpdatedJobPram{
  string product_id=1;
  string product_version=2;
  string tenant_id=3;
  bool is_delete=4;
}
